Revert "fix delete post z-index"
This reverts commit cc9f70a951bd72505d6892dcabf662360d47855d.

--- a/web/shared/css/fe/main.less
+++ b/web/shared/css/fe/main.less
@@ -439,6 +439,7 @@ i {font-style: italic;}
     height: 20px;
     .opacity(0);
     .transition(0.2s opacity);
+    z-index: 2;
 
     &:hover {
         .opacity(1) !important;
